# pytest-agent-digest

./: .changelog-config.yaml  .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  zensical.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml
.github/workflows/: build-python.yaml  bump-version-preview.yaml  bump-version.yaml  codeql-analysis.yml  publish-docs-preview.yaml  publish-docs.yaml  release-container.yaml  release-github.yaml  test.yaml
docs/: development.md  explanation.md  gen_doc_stubs.py  index.md  installation.md  quickstart.md
docs/assets/css/: field-list.css
docs/howtos/: index.md
docs/reference/: index.md  options.md
docs/reference/api/: collector.md  index.md  plugin.md  renderer.md
docs/specs/: agent-digest-v1.md  llm-report-v1.md
docs/tutorials/: index.md
pr-preview/pr-1/: search.json
pr-preview/pr-1/development/: index.html
pr-preview/pr-2/: objects.inv
pr-preview/pr-2/assets/css/: cards.css  extra.css  mkdocstrings.css
pr-preview/pr-2/quickstart/: index.html
pr-preview/pr-2/reference/api/: index.html
pr-preview/pr-3/: objects.inv
pr-preview/pr-3/reference/api/plugin/: index.html
pr-preview/pr-4/: 404.html  index.html
pr-preview/pr-4/reference/api/collector/: index.html
pr-preview/pr-5/: 404.html  objects.inv
pr-preview/pr-5/reference/api/collector/: index.html
pr-preview/pr-5/reference/api/renderer/: index.html
pr-preview/pr-5/reference/options/: index.html
pr-preview/pr-5/specs/agent-digest-v1/: index.html
pr-preview/pr-6/: objects.inv
pr-preview/pr-6/reference/api/plugin/: index.html
pr-preview/pr-6/reference/api/renderer/: index.html
pr-preview/pr-6/reference/options/: index.html
pr-preview/pr-7/quickstart/: index.html
pr-preview/pr-7/reference/api/: index.html
pr-preview/pr-8/: objects.inv  search.json
pr-preview/pr-8/reference/api/: index.html
pr-preview/pr-8/reference/api/collector/: index.html
pr-preview/pr-8/reference/api/plugin/: index.html
pr-preview/pr-9/: index.html
pr-preview/pr-9/development/: index.html
pr-preview/pr-9/reference/api/: index.html
pr-preview/pr-9/reference/api/plugin/: index.html
pr-preview/pr-9/reference/api/renderer/: index.html
pr-preview/pr-9/specs/agent-digest-v1/: index.html
pytest_agent_digest/: __init__.py  collector.py  plugin.py  renderer.py
pytest_llm_report/: __init__.py  collector.py  plugin.py  renderer.py
tests/: __init__.py  conftest.py  test_benchmark.py  test_collector.py  test_plugin.py  test_plugin_integration.py  test_renderer.py
tools/: benchmark_tokens.py  create-release.sh  gen_doc_stubs.py
